k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: calendar-frontend
  name: calendar-frontend
  namespace: calendar-frontend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: calendar-frontend
  type: ClusterIP
